# tdai-mcp-server

./: .env.example  .gitignore  README.md  README.zh-CN.md  pyproject.toml
data/store/: memory.db
docs/: 方案对比-直接模式-vs-Gateway转发.md
src/: config.py  gateway_client.py  gateway_process.py  memory_llm.py  memory_store.py  server.py
