[project]
name = "tdai-mcp-server"
version = "0.1.0"
description = "MCP Server wrapper for TencentDB Agent Memory — hierarchical memory engine for AI agents"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "aiofiles>=24.0.0",
    "httpx>=0.28.0",
]

[tool.pyright]
typeCheckingMode = "standard"
include = ["src"]
